added more questions

--- a/index.html
+++ b/index.html
@@ -358,7 +358,121 @@ body {
 			level: 0,
 			dayCompleted: ``,
 		},
+		{
+			question: `NTILE(4)４は何を表すの？`,
+			answer: ``,
+			pictureQ: `images/9.png`,
+			pictureA: `images/9a.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `CURRENT ROW`,
+			answer: `現在の行、もしくは現在の値　ROWSの場合は現在の行、RANGEの場合は現在の値`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `n PRECEDING`,
+			answer: `n 行前、もしくはｎ直前`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `n FOLLOWING`,
+			answer: `ｎ行後、もしくはｎ行直後`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `UNBOUND PRECEDING`,
+			answer: `先頭の行`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `UNBOUND FOLLOWING`,
+			answer: `末尾の行`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: ``,
+			answer: ``,
+			pictureQ: `images/10.png`,
+			pictureA: `images/10a.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `WHERE x >= '20030704' AND x <= '20030706'    他の書き方？`,
+			answer: `WHERE x BETWEEN '20030704' AND '20030706'`,
+			pictureQ: `images/10.png`,
+			pictureA: `images/10.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `LIKEは？`,
+			answer: `文字列の中の一部分のみ条件指定する場合に使用する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `％の三つ使い方は？`,
+			answer: `'%text' 'text%' '%text%'`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `LIKEで _ は何？`,
+			answer: `１桁目は任意の文字でよい`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `NULLだけを取り出したい時に何を使う？`,
+			answer: `WHERE　なんとか　IS　NULL`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+		 {
+			question: `否定したいときに何を使う？`,
+			answer: `NOT`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+	 	},
+
 	];
+
+	// {
+	// 		question: ``,
+	// 		answer: ``,
+	// 		pictureQ: `images/0.png`,
+	// 		pictureA: `images/0.png`,
+	// 		level: 0,
+	// 		dayCompleted: ``,
+	// 	},
 	
 	if(localStorage.getItem(`data`) !== null){
 		dataPrev = JSON.parse(localStorage.getItem(`data`));
