--- a/index.html
+++ b/index.html
@@ -2465,8 +2465,571 @@ body {
 			dayCompleted: ``,
 		},
 		{
+			question: `SISD`,
+			answer: `Single Instruction Single Data`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `SIMD`,
+			answer: `Single Instruction Multiple Data`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `MISD`,
+			answer: `Multiple Instruction Single Data`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `MIMD`,
+			answer: `Multiple Instruction Multiple Data`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ライブマイグレーション`,
+			answer: `仮想サーバで稼働しているOSやソフトウェアを停止することなく，他の物理サーバへ移し替える技術である。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ストレージ自動階層化の概念`,
+			answer: `データの利用目的や頻度などに応じて，データを格納するのに適したストレージヘ自動的に配置することによって，情報活用とストレージ活用を高める技術である。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `マルチテナントの概念`,
+			answer: `複数の利用者でサーバやデータベースを共有しながら，利用者ごとにデータベースの内容を明確に分離する技術である。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `リソースオンデマンドの概念`,
+			answer: `利用者の要求に応じてリソースを動的に割り当てたり，不要になったリソースを回収して別の利用者のために移し替えたりする技術である。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `LRU`,
+			answer: `(Least Recently Used)は、ここ最近で最も長い間使用されていないページを置き換え対象とするアルゴリズムです`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `インデックス方式`,
+			answer: `小さなページテーブルをいくつか使って使用中の仮想空間の領域だけをカバーし、本当に必要なときだけ追加のページテーブルを作成する多段ページテーブルを用いるので、必要となるのは最低限のページテーブルだけで済みます`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ページフォールト`,
+			answer: `置換え対象を決定した後、ページアウト／ページインが行われま interuption when a software program attempts to acess a memory block`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ページングでは固定長の単位で行われるため、フラグメンテーション(メモリの断片化)は発生し`,
+			answer: `ません`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `EEPROM`,
+			answer: `（Electrically Erasable Programmable Read-Only Memory）read-only memory whose contents can be erased and reprogrammed using a pulsed voltage.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `フラッシュメモリ`,
+			answer: `type of nonvolatile memory that erases data in units called blocks and rewrites data at the byte level. NOT DRAM`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
 			question: ``,
 			answer: ``,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `メモリセルはフリップフロップで構成され，キャッシュメモリに用いられる`,
+			answer: `SRAMに関する記述`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `インタビュー法`,
+			answer: `ユーザビリティ評価では、有効性、効率、満足度の3つの指標で評価する必要があります。有効さや効率性などは他の手法でも評価が可能ですが、満足度だけは実際に操作を行ったユーザへの聞き取り調査でしか知ることができません。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ユーザビリティテスト`,
+			answer: `数人の被験者がタスクを実行する過程を観察し、被験者の行動、発話からユーザーインタフェース上の問題点を発見する評価手法です。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ログデータ分析法`,
+			answer: `被験者に製品を操作してもらい、その操作ログから利用パターンを分析することでユーザビリティ問題を明らかにする評価手法です。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `SSL/TLSアクセラレータ`,
+			answer: `WebサーバのCPU負荷を軽減するために，TLSによる暗号化と復号の処理をWebサーバではなく専用のハードウェア上で行う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `WAF`,
+			answer: `Web Application Firewall:特徴的なパターンが含まれるかなどWebアプリケーションへの通信内容を検査して，不正な操作を遮断する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ペネトレーションテスト(侵入テスト)の説明`,
+			answer: `DMZに設置されているWebサーバへ外部から実際に侵入を試みる。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: ` roll-backward recovery`,
+			answer: `the active transactions at the time of failure are aborted and the resourced allocated for those transactions are released.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `roll-forward recovery`,
+			answer: `the updates recorded in the redo log are transferred to the database so that they are not lost.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ゲートウェイ`,
+			answer: `ゲートウェイは、OSI基本参照モデルの全階層を認識し、主に4層より上で異なるネットワーク間の変換を行う通信機器です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ブリッジ`,
+			answer: ` a device that connects two LANs`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `リピータ`,
+			answer: `OSI基本参照モデル第1層の物理層で接続し、データ伝送中に弱くなった電気信号を増幅することで、データの伝送可能距離を延長するLAN間接続装置です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ルータ`,
+			answer: `OSI基本参照モデルの第3層のネットワーク層で接続し、通過するパケットのIPアドレスを見てパケットを最適な経路に中継する通信装置です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `OSI`,
+			answer: `Open Systems Interconnection`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `What are the 7 layers to OSI?`,
+			answer: `Application, presentation, session, transport, network, data link, physical`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `application Layer`,
+			answer: `human-computer interaction layer, where applications can access the network services`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `presentation layer`,
+			answer: `ensures that data is in a usable format and is where data encryption occurs`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `session layer`,
+			answer: `maintains connections and is responsible for controlling ports and sessions`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `transport layer`,
+			answer: `transmits data using transmission protocols including TCP and UDP`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `network layer`,
+			answer: `decides which physical path the data will take`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `data link layer`,
+			answer: `defines the format of data on the network`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `physical layer`,
+			answer: `transmits raw bit stream over the physical medium`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `RASP`,
+			answer: ` Runtime Application Self-Protection: It takes advantage of insight into an application's internal data and state to enable it to identify threats at runtime that may have otherwise been overlooked by other security solutions.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `CDN`,
+			answer: `Content delivery networks :distributed group of servers that caches content near end users.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `AES`,
+			answer: `Advanced Encryption Standard:共通鍵暗号方式`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ElGamal暗号`,
+			answer: `非常に大きな数の離散対数問題を解くことが困難であることを利用した公開鍵暗号方式です。共通鍵を安全に共有する方法であるDiffie-Hellman法の技術を暗号化方式に応用したものです`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `RSA`,
+			answer: `Rivest–Shamir–Adleman:けた数の大きな数の素因数分解に膨大な時間がかかることを利用した公開鍵暗号方式`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `楕円曲線暗号`,
+			answer: `Elliptic Curve Cryptography 楕円曲線上の離散対数問題を解くことが困難であることを利用した公開鍵暗号方式です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `性能効率性`,
+			answer: `performance efficiency: 明記された状態（条件）で使用する資源の量に関係する性能の度合い`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `モジュール結合度`,
+			answer: `モジュール同士の関連性の強さを示す概念です。モジュール同士の結合度合いが強ければ、関連するモジュールに変更があった場合の影響は大きく、反対に結合度が弱ければ影響を受けにくくなります。独立性と保守性の観点から、モジュール結合度は低いほど良いとされています。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `データ結合(弱い↑)`,
+			answer: `処理に必要なデータだけを単一のパラメータとして受け渡している`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `スタンプ結合`,
+			answer: `処理に必要なデータだけをレコードや構造体などのデータ構造として受け渡している。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `制御結合`,
+			answer: `もう１つのモジュールの制御要素を受け渡している。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `外部結合`,
+			answer: `外部宣言された共通データを参照している。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `共通結合`,
+			answer: `外部宣言されたデータ構造を共通データ領域として参照している。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `内容結合(強い↓)`,
+			answer: `お互いのモジュール内部のデータを直接参照している。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SRS`,
+			answer: `Software Requirement Specification`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SDD`,
+			answer: `Software Design Document`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Coupling`,
+			answer: `the degree of interdependence between software modules.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `High coupling`,
+			answer: `modules are closely connected and changes in one module may affect other modules.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Low coupling`,
+			answer: `modules are independent and changes in one module have little impact on other modules.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Cohesion`,
+			answer: `the degree to which elements within a module work together to fulfill a single, well-defined purpose.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `High cohesion`,
+			answer: `elements are closely related and focused on a single purpose,`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `low cohesion`,
+			answer: `elements are loosely related and serve multiple purposes.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `what are the 6 levels of coupling in order froom best to worst`,
+			answer: `data couplingデータ結合, stamp couplingスタンプ結合, control coupling制御結合, external coupling外部結合, common coupling共通結合, content coupling内容結合,`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `COCOMO`,
+			answer: `Constructive Cost Model:、ソフトウェアの見積もりで、予想されるプログラム行数にエンジニアの能力や要求の信頼性などの補正係数を掛け合わせて開発工数や期間，要員や生産性を見積もる手法です。自社における生産性のデータ収集が不可欠`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `サービスレベル管理`,
+			answer: `あらかじめ定めた間隔で，サービス目標に照らしてサービスの傾向及びパフォーマンスを監視する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `構成管理`,
+			answer: `すべてのIT資産を明確化し、これらの維持管理や他のプロセスが効率的なサービスを提供できるように構成情報の提供を行うプロセスです。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `予備調査`,
+			answer: `本調査の前に監査対象システムの概要を把握する目的で実施される調査です。関連資料のレビューや簡易的なチェックリストを使用した分析などを通じて、監査対象システムの現状や潜在的問題点などの情報が収集されます。収集された情報は本調査を効果的に進めるために使用されます。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `IT投資評価における3フェーズ`,
+			answer: `事前評価, 中間評価, 事後評価`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `事前評価`,
+			answer: `実施前の投資案件に対して、内部の了解を得るとともに他のプロジェクトとの整合などの全体最適の観点から評価を行う。投資実行の可否を判断するための情報を提供する役割を担う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `中間評価`,
+			answer: `実施中の投資案件の実績をモニタリングし評価する。実施計画の軌道修正を判断するための情報を提供する役割を担う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `事後評価`,
+			answer: `実施済の投資案件が事前に設計した目的・効果を達成しているかどうかを評価する。IT投資の実施効果を上位マネジメントに報告するとともに、終結以後の改善策について判断するための情報を提供する役割を担う`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SOA`,
+			answer: `Service-oriented architecture: uses software components called services to create business applications. Each service provides a business capability, and services can also communicate with each other across platforms and languages. Developers use SOA to reuse services in different systems or combine several independent services to perform complex tasks.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `クラス図`,
+			answer: `オブジェクト、属性、オブジェクト間の関係からシステムの構造を記述する静的な構造図です。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `コラボレーション図`,
+			answer: `オブジェクトの振る舞いをオブジェクト間の接続関係に着目して表現した図です。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ステートチャート図`,
+			answer: `状態遷移図を基本にして、オブジェクト内に存在する状態や、その状態の移り変わりを表現する図です。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `リーダ企業`,
+			answer: `市場においてナンバー1のシェアを誇る企業`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `チャレンジャ企業`,
+			answer: `リーダに次ぐシェアを保持し、リーダに競争をしかける2・3番手の企業`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ニッチャ企業`,
+			answer: `小さいながらも特定の市場で、独自の地位を築いている企業`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `フォロワ企業`,
+			answer: `リーダやチャレンジャの製品・サービスを模倣して、市場での地位を維持している企業
+この分類と採るべき戦略を関連つけると、以下のように考えることができます。`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
