--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@ body {
 		},
 		{
 			question: `ITIL v3 no 6つの管理`,
-			answer: `１．インシデント管理：サービス復旧　２．問題管理：対策再発防止策　３．変更管理：リスクとメリットを考慮してリリスするかどうか評価　４．構成：情報の維持管理および確認監査を目的としたプロセス５．リリス：変更管理で承認された内容を本番環境作業　６．サービスデスク：顧客の窓口`,
+			answer: `１．インシデント管理：サービス復旧　２．問題管理：根本原因、対策再発防止策　３．変更管理：リスクとメリットを考慮してリリスするかどうか評価　４．構成：情報の維持管理および確認監査を目的としたプロセス５．リリス：変更管理で承認された内容を本番環境作業　６．サービスデスク：顧客の窓口`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
@@ -3029,12 +3029,373 @@ body {
 		{
 			question: `フォロワ企業`,
 			answer: `リーダやチャレンジャの製品・サービスを模倣して、市場での地位を維持している企業
-この分類と採るべき戦略を関連つけると、以下のように考えることができます。`,
+			この分類と採るべき戦略を関連つけると、以下のように考えることができます。`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
 			dayCompleted: ``,
 		},
+		{
+			question: `データマイニング`,
+			answer: `蓄積されたデータを分析し，単なる検索だけでは分からない隠れた規則や相関関係を見つけ出すこと`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `データマートの説明`,
+			answer: `データウェアハウスに格納されたデータの一部を，特定の用途や部門用に切り出して，データベースに格納すること`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `データモデルの説明`,
+			answer: `データ処理の対象となる情報を基に規定した，データの構造，意味及び操作の枠組みのこと`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `クラスタシステムの説明`,
+			answer: `データを複数のサーバに複製し，性能と可用性を向上させること`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `論理積素子`,
+			answer: `AND`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `否定論理積素子`,
+			answer: `NAND`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `論理和素子`,
+			answer: `OR`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `否定論理和素子`,
+			answer: `NOR`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `排他的論理和素子`,
+			answer: `XOR`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `論理否定器`,
+			answer: `NOT`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `overhead`,
+			answer: `system resources which are consumed by computer when it's running a program or process usuallly counted in time or memory usage.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `super scalar`,
+			answer: `specific type of microprocessor that uses instruction level parallelism to help facilitate more than one instruction during a clock cycle.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `round robin`,
+			answer: `premptive scheduling each process is provided a fix time to execute. Considers a time quantum for each process.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `time quantum`,
+			answer: `fixed time to execute.`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `How to solve 10進数123 A=0, B=1, ...`,
+			answer: `divide the number given by code number(in this case 26).Then check remainder. ET would be 419. E=4 and T=19 `,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Ps to Cs?`,
+			answer: `Product(customer value). price(cost). place(convenience). promotion(communication)`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `個人情報保護法`,
+			answer: `生存する個人に関する情報であって、次のいずれかに該当するものとされています。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ユークリッドの互除法`,
+			answer: `２つの自然の最大公約数を求める`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `VNF`,
+			answer: `Virtual Network Function：単一の物理サーバ内の仮想サーバ同士が，外部のネットワーク機器を経由せずに，物理サーバ内部のソフトウェアで実現された仮想スイッチを経由して，通信する方式`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SDN`,
+			answer: `Software-Defined Networking：データを転送するネットワーク機器とは分離したソフトウェアによって，ネットワーク機器を集中的に制御，管理するアーキテクチャ`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ASN.1`,
+			answer: `Abstract Syntax Notation One：プロトコルの文法を形式言語を使って厳密に定義する，ISOで標準化された通信プロトコルの規格`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `汎化－特化`,
+			answer: `is-a`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `集約－分解`,
+			answer: `part-of`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: ``,
+			answer: ``,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `イテレーションの目的`,
+			answer: `ソフトウェアに存在する顧客の要求との不一致を解消したり，要求の変化に柔軟に対応したりする`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `タスクボードの目的`,
+			answer: `タスクの実施状況を可視化して，いつでも確認できるようにする。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ピンポンペアプログラミングの目`,
+			answer: `ペアプログラミングのドライバとナビゲータを固定化させない`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `日次スクラムの目的`,
+			answer: `毎日決めた時刻にチームメンバが集まって開発の状況を共有し，問題が拡大したり，状況が悪化したりするのを避ける。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `KPIの種類`,
+			answer: `可用性、ITサービス継続性、キャパシティ管理、サービスレベル管理`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `BSCの4つのKPI視点`,
+			answer: `「財務」「顧客」「内部ビジネスプロセス」「学習と成長」`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `浸透価格戦略`,
+			answer: `低価格戦略と積極的なプロモーションによって，新製品のマーケットシェアの増大を図る。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `拡大戦略`,
+			answer: `新規事業に進出することによって，企業を成長させ，利益の増大を図る`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `即時撤退戦略`,
+			answer: `事業を分社化し，その会社を売却することによって，投下資金の回収を図る`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `収穫戦略`,
+			answer: `売上高をできるだけ維持しながら，製品や事業に掛けるコストを徐々に引き下げていくことによって，短期的なキャッシュフローの増大を図る`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `クロスセクション法`,
+			answer: `特定の事象に対する影響因子の相互関係を分析する手法`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `シナリオライティング法`,
+			answer: `現在の状態から出発して、将来の世界の発展の可能性をシナリオにまとめるという形の一種の総合的予測手法、あるいは未来展望記述方法の一つです`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `親和図法`,
+			answer: `集めたデータを親和性によってグループ化することによって、問題を整理する方法です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デルファイ法`,
+			answer: `技術開発戦略の立案に必要となる将来の技術動向の予測などに用いられる技法`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デルファイ法の３つ`,
+			answer: `①複数の専門家からの意見収集、②得られた意見の統計的集約、③集約された意見のフィードバックという三手順を繰り返して回答を収束し、最終的な意見を得るものです`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ライン生産方式`,
+			answer: `生産ライン上の作業場所を通過するに従い製品の加工が進む`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `かんばん方式`,
+			answer: `作業指示と現場管理を見えるようにするために，かんばんを使用する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `後工程引き取り方式`,
+			answer: `必要とする部品，仕様，数量が後工程から前工程へと順次伝わる`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `セル生産方式`,
+			answer: `部品の組立てから完成検査まで，ほとんどの工程を1人又は数人で作業する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `BEP`,
+			answer: `Break even point:損益分岐点`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: ``,
+			answer: ``,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+
 	];
 	
 	if(localStorage.getItem(`data`) !== null){
@@ -3204,7 +3565,7 @@ body {
 	
 	const flipButton = (prop) => {
 		isFlipped = true;
-		modal.removeChild(prop.target);
+		modal.removeChild(prop);
 		openModal();
 	};
 	
@@ -3240,7 +3601,7 @@ body {
 
 		button.addEventListener("click", (prop)=>{
 			if(buttonNum === 5){
-				flipButton(prop);
+				flipButton(prop.target);
 			} else {
 				switch(buttonNum) {
 					case 1:
@@ -3265,22 +3626,72 @@ body {
 				} else {
 					reviewsProgress.innerHTML = "Reviews: " + numOfReviews;
 				}
-
-				
 			};
 		});
+
+		
+		
 		return button;
 	};
+
+	let buttonFail = buttonCreator(1);
+	let buttonBad = buttonCreator(2);
+	let buttonGood = buttonCreator(3);
+	let buttonPass = buttonCreator(4);
+	let buttonFlip = buttonCreator(5);
+
+		window.addEventListener("keypress", (event)=>{
+			let continueFunction = () => {
+				closeModal();
+				localStorage.setItem(`data`, JSON.stringify(data));
+				numOfReviews++;
+				localStorage.setItem(`numOfReviews`, JSON.stringify(numOfReviews));
+				if(numOfReviews%10 !== 0 ){
+					setTimeout(() => {openModal()}, 10);
+				} else {
+					reviewsProgress.innerHTML = "Reviews: " + numOfReviews;
+				}
+			};		
+
+
+			if(outline.children[2]){
+				if(event.code === "Space"){
+					event.preventDefault;	
+					flipButton(buttonFlip);
+				} else  {
+					switch(event.code) {
+					case "KeyA":
+						data[currentNum].level = (data[currentNum].level - 2) < 0 ? 0 : data[currentNum].level - 2;
+						continueFunction();
+						break;
+					case "KeyS":
+						data[currentNum].level = (data[currentNum].level - 1) < 0 ? 0 : data[currentNum].level - 1;
+						continueFunction();
+						break;
+					case "KeyD":
+						data[currentNum].level = (data[currentNum].level + 1) > 10 ? 10 : data[currentNum].level + 1;
+						continueFunction();
+						break;
+					case "KeyF":
+						data[currentNum].level = (data[currentNum].level + 2) > 10 ? 10 : data[currentNum].level + 2;
+						continueFunction();
+						break;
+					};
+				};
+			};
+		});
+	
+
 	const openModal = () => {
 		modal.innerHTML = "";
 		
 		if(isFlipped) {
-			buttonCreator(1);
-			buttonCreator(2);
-			buttonCreator(3);
-			buttonCreator(4);
+			modal.appendChild(buttonFail);
+			modal.appendChild(buttonBad);
+			modal.appendChild(buttonGood);
+			modal.appendChild(buttonPass);
 		} else {
-			buttonCreator(5);
+			modal.appendChild(buttonFlip);
 		};
 
 		let questionP = document.createElement("div");
@@ -3311,6 +3722,7 @@ body {
 		isFlipped = false;
 		calculateScore();
 	};
+
 
 
 
