--- a/index.html
+++ b/index.html
@@ -3388,6 +3388,508 @@ body {
 			dayCompleted: ``,
 		},
 		{
+			question: `統合`,
+			answer: `integration/unification`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `遵守`,
+			answer: `じゅんしゅcompliant`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `可用性`,
+			answer: `availability`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `類似性`,
+			answer: `similarity`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `一意`,
+			answer: `unique`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `揮発`,
+			answer: `volitation`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `被験者`,
+			answer: `subject`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `素因数分解`,
+			answer: `prime factorization`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `工数`,
+			answer: `man-hours`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `導入`,
+			answer: `introduction`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `監査`,
+			answer: `audit`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `消失`,
+			answer: `disappearance`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `一元`,
+			answer: `unitary/unify`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `許容`,
+			answer: `tolerance`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `手順書`,
+			answer: `procedural manual`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `被監査`,
+			answer: `being audited, audit client`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `仮想サーバ`,
+			answer: `virtual server`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `定量的`,
+			answer: `quantitative`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `侵害`,
+			answer: `infringement`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SSID`,
+			answer: `service set identifier: sequence of characters that uniquely names a wifi network name`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `What does WPA2 use?`,
+			answer: `SSID and a preshared key`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `generalization`,
+			answer: `汎化　process in which a new entity is formed using common attributes of two or more entities. is-a`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `agile development`,
+			answer: `continues releases and customer feedback`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `program management`,
+			answer: `process of managging programs mapped to business objectives that improve organization perfomance`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `PMO`,
+			answer: `project management office: defines and maintains standardss for a company`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `仮想記憶の説明`,
+			answer: `主記憶と外部記憶を一元的にアドレス付けし，主記憶の物理容量を超えるメモリ空間を提供する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ディスクバッファ`,
+			answer: `主記憶と磁気ディスク装置との間にバッファメモリを置いて，双方のアクセス速度の差を補う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `DMA制御方式の説明`,
+			answer: `主記憶と入出力装置との間でCPUとは独立にデータ転送を行う。Direct memory access`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `メモリインタリーブ`,
+			answer: `主記憶を複数のバンクに分けて，CPUからのアクセス要求を並列的に処理できるようにする。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `NoSQL4つのタイプ`,
+			answer: `1.キー・バリュー型: 1つのキーに1つの値を結びつけてデータを格納 2.カラム指向: 行キーに対してカラムを結びつけて格納 3.ドキュメント指向: XMLやJSONなどの構造でデータを格納 4.グラフ指向:グラフ理論に基づいてデータ間の関係性を表現`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `オブジェクト指向データベースの説明`,
+			answer: `関係データモデルをオブジェクト指向データモデルに拡張し，操作の定義や型の継承関係の定義を可能としたデータベース`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `データウェアハウスの説明`,
+			answer: `経営者の意思決定を支援するために，ある主題に基づくデータを現在の情報とともに過去の情報も蓄積したデータベース`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `データディクショナリやリポジトリの説明`,
+			answer: `データ項目の名称や形式など，データそのものの特性を表すメタ情報を管理するデータベース`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `AR`,
+			answer: `Augmented Reality，拡張現実: インターネット上で地理情報システムと拡張現実の技術を利用することによって，現実空間と仮想空間をスムーズに融合させた様々なサービスを提供する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ディープラーニング`,
+			answer: `様々な入力情報に対する処理結果をニューラルネットワークに学習させることによって，画像認識や音声認識，自然言語処理などの問題に対する解を見いだす`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ペトリネット`,
+			answer: `プレースとトランジションと呼ばれる2種類のノードをもつ有向グラフであり，システムの並列性や競合性の分析などに利用される`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `バッファオーバフロー攻撃の手口`,
+			answer: `大量のデータをWebアプリケーションに送ることによって，用意されたバッファ領域をあふれさせる。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `クラッキングの手口`,
+			answer: `インターネットなどのネットワークを通じてサーバに不正にアクセスしたり，データの改ざんや破壊を行ったりする。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ディレクトリトラバーサル攻撃の手口`,
+			answer: `パス名を推定することによって，本来は認証された後にしかアクセスが許可されていないページに直接ジャンプする。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `project management types`,
+			answer: `scope, cost, schedule, project team`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `PDCA`,
+			answer: `plan, do (perform) check(monitor), act(improve)`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `CMDB`,
+			answer: `構成管理プロセス contains all relevant information about the hardware and software components used in an organization's IT`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `リリース及び展開管理プロセス`,
+			answer: `正しい場所及び時間での構成品目の配付`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `変更管理プロセスの活動`,
+			answer: `変更管理方針で定義された構成品目に対する変更要求の管理`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ファジングの説明`,
+			answer: `ソフトウェアに，問題を引き起こしそうな多様なデータを入力し，挙動を監視して，脆弱性を見つけ出す`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ポートスキャン`,
+			answer: `サーバにFINパケットを送信し，サーバからの応答を観測して，稼働しているサービスを見つけ出す。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `ログ分析の説明`,
+			answer: `サーバのOSやアプリケーションソフトが生成したログやコマンド履歴などを解析して，ファイルサーバに保存されているファイルの改ざんを検知する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `パターンマッチングの説明`,
+			answer: `ネットワーク上を流れるパケットを収集し，そのプロトコルヘッダやデータを解析して，あらかじめ登録された攻撃パターンと一致した場合は不正アクセスと判断する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},		{
+			question: `セッションタイムアウト`,
+			answer: `Webアプリケーションにはセッションタイムアウト機能を設ける`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `明示的なログアウトの機能`,
+			answer: `Webアプリケーションには明示的なログアウトの機能を設ける。できれば、各ページでログアウト操作が行えると良い`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `6つのソフトウェアライフサイクルプロセス`,
+			answer: `1.ソフトウェア要求事項分析プロセス:
+				システムのソフトウェア要素の要求事項を確立する
+			2ソフトウェア方式設計プロセス:
+					要求事項を実装し，それに対して検証できるソフトウェアの設計を提供する
+			3ソフトウェア詳細設計プロセス:
+				要求事項及びソフトウェア方式に対して実装し，検証でき，コーディング及びテストを可能にするために十分に詳細である設計をソフトウェアのために提供する
+			4ソフトウェア構築プロセス:
+				ソフトウェア設計を適切に反映した実行可能なソフトウェアユニットを作り出す
+			5ソフトウェア結合プロセス:
+				ソフトウェアユニット及び構成部品を組み合わせ，結合されたソフトウェア品目を作り出す
+			6ソフトウェア適格性確認テストプロセス:
+				結合されたソフトウェア製品がその定義された要求事項を満たすことを確認する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デザインハウスの説明`,
+			answer: `相手先ブランドで販売する電子機器の設計だけを受託し，製造は相手先で行う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `付加価値再販業者の説明`,
+			answer: `外部から調達した電子機器に付加価値を加えて，自社ブランドで販売する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `EMSの説明`,
+			answer: `生産設備をもつ企業が，他社からの委託を受けて電子機器を製造する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `RFI`,
+			answer: `Request for Information：情報提供依頼書: Get info from potential suppliers of a good or service`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `RFC`,
+			answer: `Request for Change：変更依頼書:契約内容で取り決めた内容に関して，変更を要請すること `,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `因果関係分析法`,
+			answer: `複数の対象データ間の因果関係を分析する手法です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `時系列回帰分析法`,
+			answer: `時系列データを分析することで、それらの関係を表す「回帰モデル」と呼ばれる数式を明らかにし、将来の売り上げ予測などに用いる手法です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `特定商取引法`,
+			answer: `訪問販売、通信販売、電話勧誘販売取引、連鎖販売取引などのトラブルの起きやすい7つの取引(特定商取引)が公正に行われるためのルールを定めることで、購入者等の利益を保護する法律`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `不正競争防止法`,
+			answer: `不正競争防止法は、事業者間の公正な競争等を確保するため、営業秘密侵害、原産地偽装、コピー商品の販売などの不正競争を規制する法律`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `プロバイダ責任制限法`,
+			answer: `インターネットでのウェブページや電子掲示板などへの投稿のように不特定多数の者が閲覧する通信について、プロバイダ等の「損害賠償責任の制限」および、それらの通信で損害を被った者に与えられる「発信者情報の開示請求権」を定めた法律`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `刑法`,
+			answer: `企業のWebサイトに接続してWebページを改ざんし，システムの使用目的に反する動作をさせて業務を妨害する行為を処罰の対象とする法律`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
 			question: ``,
 			answer: ``,
 			pictureQ: `images/0.png`,
@@ -3395,6 +3897,7 @@ body {
 			level: 0,
 			dayCompleted: ``,
 		},
+
 
 	];
 	
