--- a/index.html
+++ b/index.html
@@ -3890,6 +3890,214 @@ body {
 			dayCompleted: ``,
 		},
 		{
+			question: `エキスパートシステム`,
+			answer: `知識がルールに従って表現されており，演繹手法を利用した推論によって有意な結論を導く手法である。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `マルチタスクの説明`,
+			answer: `一つのプロセッサコアで複数のスレッドを切り替えて並列に実行する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `マルチコアプロセッシングの説明`,
+			answer: `一つのチップ内に複数のプロセッサコアを実装し，複数のスレッドを並列に実行する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デッドロック`,
+			answer: `共有資源を使用する2つ以上のプロセスが、互いに相手プロセスが必要とする資源を排他的に使用していて、互いのプロセスが相手の使用している資源の解放を待っている状態`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デッドロックの発生を防ぐ`,
+			answer: `共有資源の使用順序を同じにします`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `モデリングの説明`,
+			answer: `物体をワイヤフレーム，ポリゴンなどを用いて，モデル化すること`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `レンダリングの説明`,
+			answer: `物体の表面に陰影を付けたり，光を反射させたりして，画像を作ること`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `デジタルアニメーション`,
+			answer: `複数の静止画を1枚ずつ連続表示することによって，動画を作ること`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `NAPT`,
+			answer: `Network Address Port TranslationプライベートIPアドレスとグローバルIPアドレスを1対1で相互変換するNATの考え方に、ポート番号でのクライアント識別を組み合わせた技術 Router takes 宛先ポート番号と宛先IPアドレス`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `リスクベース認証の説明`,
+			answer: `普段と異なる環境からのアクセスと判断した場合，追加の本人認証をすることによって，不正アクセスに対抗し安全性を高める。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `二要素認証の説明`,
+			answer: `ハードウェアトークンとパスワードを併用させるなど，認証要求元の環境によらず常に二つの認証方式を併用することによって，安全性を高める。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `RADIUS認証の説明`,
+			answer: `いかなる環境からの認証の要求においても認証方法を変更せずに，同一の手順によって普段どおりにシステムが利用できる。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `パスワードリマインダ`,
+			answer: `利用者が認証情報を忘れ，かつ，Webブラウザに保存しているパスワード情報も使用できない場合でも，救済することによって，利用者は普段どおりにシステムを利用できる。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `HIDS(ホスト型IDS)の説明`,
+			answer: `サーバのOSへの不正なログインを監視する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ウイルス対策ソフト`,
+			answer: `ファイルへのマルウェア感染を監視し，検出する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `WAFの説明`,
+			answer: `Webアプリケーションへの攻撃を検知し，阻止する。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `サンドボックスの説明`,
+			answer: `不正な動作の可能性があるプログラムを特別な領域で動作させることによって，他の領域に悪影響が及ぶのを防ぐ`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `リバースプロキシ`,
+			answer: `Webサーバの前段に設置し，不特定多数のPCから特定のWebサーバへのリクエストに代理応答する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `サニタイジングやエスケープ処理の説明`,
+			answer: `Webアプリケーションの入力フォームへの入力データに含まれるHTMLタグ，JavaScript，SQL文などを他の文字列に置き換えることによって，入力データ中に含まれる悪意のあるプログラムの実行を防ぐ`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `SIEM`,
+			answer: `Security Information and Event Management:OS，DBMS，アプリケーションソフトウェア，ネットワーク機器など多様なソフトウェアや機器が出力する大量のログデータを分析する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `How to calculate CPI`,
+			answer: `EV÷AC`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `How to calculate ETC`,
+			answer: `(BAC－EV)÷CPI`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `How to calculate EAC`,
+			answer: `AC＋ETC`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `CRM`,
+			answer: `Customer Relationship Management`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `オブジェクト図`,
+			answer: `ある特定の時点でのオブジェクトのインスタンス間の静的な構造を記述する図です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `クラス図`,
+			answer: `クラス、属性、クラス間の関係からシステムの構造を記述する静的な構造図です`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
 			question: ``,
 			answer: ``,
 			pictureQ: `images/0.png`,
